# aged_mcp_server

./: .env.example  .gitignore  README.md  _requirements.txt  mcp_config.json  pyproject.toml  requirements.txt  server.py
src/curriculo_matematica/: __init__.py  app.py
src/curriculo_matematica/dao/: curriculo.py  curriculo_gateway.py  student_profile.py
src/curriculo_matematica/data/: __init__.py  curriculo.py
src/curriculo_matematica/models/: __init__.py  curriculo_relacional.py  student_profile.py
src/curriculo_matematica/resources/: curriculo.py
src/curriculo_matematica/schemas/: __init__.py  bitacora.py  perfil_kolb.py
src/curriculo_matematica/tools/: bitacora.py  consulta.py  didactica.py  navegacion.py  perfil_kolb.py
src/server-mcp/: app.py
src/server-mcp/dao/: bitacora.py  student_profile.py
src/server-mcp/data/: __init__.py
src/server-mcp/db/: engine.py
src/server-mcp/models/: __init__.py  bitacora.py  student_profile.py
src/server-mcp/resources/: curriculo.py
src/server-mcp/schemas/: __init__.py  perfil_kolb.py
student_profiles/: copilot-consistency-smoke-20260418.json  copilot-smoke-test-nonexistent.json  pytest-roundtrip-2d3b976488124074b8e1904d3380a341.json  pytest-roundtrip-5a29860128be49718f2aba2fdd112bf7.json  pytest-roundtrip-604fa4517c164eb2a81a18cad494e0bf.json  pytest-roundtrip-7bc047e7e54249129ae2d73c8cce5882.json  pytest-roundtrip-d9afb296b8e84dd5bb9cc99488870488.json
tests/: conftest.py  test_bitacora_tools.py  test_curriculo_tools.py  test_perfil_kolb_integration.py  test_perfil_kolb_tools.py
(+4 files in other folders)
