[project]
name = "aged-mcp-server"
version = "0.1.0"
description = "Servidor MCP con datos curriculares para un agente docente de matemática"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0",
]

[project.scripts]
aged-mcp-server = "curriculo_matematica.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/curriculo_matematica"]

[tool.pytest.ini_options]
testpaths = ["tests"]
